<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dm_16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sans_semi_expanded_bold"
        android:text="@string/setup_your_password"
        android:textColor="?android:textColorPrimary"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_setup_passcode_advice_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/setup_your_password_summary"
        android:textColor="?android:textColorPrimary"
        android:textSize="@dimen/primary_text_size" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_setup_passcode_enter_password_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/password"
        app:hintTextColor="?colorOnSurface"
        app:boxBackgroundColor="?colorSurface"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_setup_passcode_confirm_password_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dm_16dp"
        android:hint="@string/verify_password"
        app:hintTextColor="?colorOnSurface"
        app:boxBackgroundColor="?colorSurface"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_setup_passcode_warning_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dm_16dp"
        android:drawableTint="?colorError"
        android:gravity="center"
        android:textColor="?colorError"
        android:textSize="@dimen/paragraph_text_size"
        android:visibility="gone"
        tools:text="@string/password_not_match"
        tools:visibility="visible" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_setup_passcode_create_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/color_start_button"
        android:paddingVertical="14dp"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="?colorOnSecondary"
        android:textSize="@dimen/primary_text_size"
        app:elevation="0dp" />

</androidx.appcompat.widget.LinearLayoutCompat>