<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="?actionBarSize"
        android:layout_margin="@dimen/dm_16dp"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="64dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/fragment_password_icon_view"
                android:layout_width="84dp"
                android:layout_height="84dp"
                android:layout_marginBottom="@dimen/dm_16dp"
                app:srcCompat="@drawable/ic_app" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/app_name"
                android:textColor="?android:textColorPrimary"
                android:textSize="20sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_password_enter_password_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/password"
            app:hintTextColor="?colorOnSurface"
            app:boxBackgroundColor="?colorSurface"
            app:boxCornerRadiusBottomEnd="4dp"
            app:boxCornerRadiusBottomStart="4dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_password_warning_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dm_16dp"
            android:drawableTint="?colorError"
            android:gravity="center"
            android:textColor="?colorError"
            android:textSize="@dimen/paragraph_text_size"
            android:visibility="gone"
            tools:text="@string/password_not_match" />

        <androidx.cardview.widget.CardView
            android:id="@+id/fragment_password_confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dm_16dp"
            android:layout_marginBottom="32dp"
            app:cardBackgroundColor="?colorSecondary"
            app:cardElevation="0dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingVertical="16dp"
                android:text="@string/start"
                android:textAllCaps="false"
                android:textColor="?colorOnSecondary"
                android:textSize="@dimen/page_title_text_size"
                app:cornerRadius="8dp" />

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_password_forgotten_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="4dp"
            android:text="@string/forgotten_password"
            android:textColor="@color/color_clickable_text_primary"
            android:textSize="@dimen/primary_text_size"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_password_fingerprint_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginTop="4dp"
            android:drawableStart="@drawable/ic_fingerprint"
            android:drawablePadding="4dp"
            android:drawableTint="@color/color_clickable_text_primary"
            android:paddingVertical="4dp"
            android:text="@string/fingerprint_authentication"
            android:textColor="@color/color_clickable_text_primary"
            android:textSize="@dimen/primary_text_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>